Track when mods are added (unused), 8GB RAM preset, add Xverify:none,